--- a/Project Frontend/首页/index.html
+++ b/Project Frontend/首页/index.html
@@ -38,8 +38,8 @@
 <!-- default css files -->
 	
 <!--web font-->
-	<link href="http://fonts.googleapis.com/css?family=Pacifico&amp;subset=latin-ext,vietnamese" rel="stylesheet">
-	<link href="http://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i&amp;subset=cyrillic,latin-ext" rel="stylesheet">
+	<link href="http://fonts.loli.net/css?family=Pacifico&amp;subset=latin-ext,vietnamese" rel="stylesheet">
+	<link href="http://fonts.loli.net/css?family=Playfair+Display:400,400i,700,700i,900,900i&amp;subset=cyrillic,latin-ext" rel="stylesheet">
 <!--//web font-->
 	
 <!-- scrolling script -->
