更改为在线资源

--- a/Project Frontend/首页/index.html
+++ b/Project Frontend/首页/index.html
@@ -8,8 +8,8 @@
     <meta name="keywords" content="" />
 
     <!-- Default-JavaScript-File -->
-    <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="http://alist.tlljyang.pp.ua:16600/DBMS-PROJECT-test/extra/main/js/jquery-2.1.4.min.js"></script>
+    <script type="text/javascript" src="http://alist.tlljyang.pp.ua:16600/DBMS-PROJECT-test/extra/main/js/bootstrap.js"></script>
     <!-- //Default-JavaScript-File -->
 
     <link rel="stylesheet" href="css/easy-responsive-tabs.css"><!-- easy responsive tabs css -->
@@ -346,7 +346,7 @@
     </div>
 
     <!-- tabs  js-->
-    <script src="js/easy-responsive-tabs.js"></script>
+    <script src="http://alist.tlljyang.pp.ua:16600/DBMS-PROJECT-test/extra/main/js/easy-responsive-tabs.js"></script>
     <script>
         $(document).ready(function () {
             $('#horizontalTab').easyResponsiveTabs({
@@ -671,7 +671,7 @@
     </div>
     <!-- //gallery -->
     <!-- gallery js -->
-    <script src="js/lsb.min.js"></script>
+    <script src="http://alist.tlljyang.pp.ua:16600/DBMS-PROJECT-test/extra/main/js/lsb.min.js"></script>
     <script>
         $(window).load(function () {
             $.fn.lightspeedBox();
@@ -747,7 +747,7 @@
                             });
                         });
                     </script>
-                    <script type="text/javascript" src="js/jquery.flexisel.js"></script>
+                    <script type="text/javascript" src="http://alist.tlljyang.pp.ua:16600/DBMS-PROJECT-test/extra/main/js/jquery.flexisel.js"></script>
                 </div>
             </div>
         </div>
@@ -795,8 +795,8 @@
     </div>
     <!-- //copyright -->
 
-    <script src="js/jarallax.js"></script>
-    <script src="js/SmoothScroll.min.js"></script>
+    <script src="http://alist.tlljyang.pp.ua:16600/DBMS-PROJECT-test/extra/main/js/jarallax.js"></script>
+    <script src="http://alist.tlljyang.pp.ua:16600/DBMS-PROJECT-test/extra/main/js/SmoothScroll.min.js"></script>
     <script type="text/javascript">
         /* init Jarallax */
         $('.jarallax').jarallax({
@@ -805,8 +805,8 @@
             imgHeight: 768
         })
     </script>
-    <script type="text/javascript" src="js/move-top.js"></script>
-    <script type="text/javascript" src="js/easing.js"></script>
+    <script type="text/javascript" src="http://alist.tlljyang.pp.ua:16600/DBMS-PROJECT-test/extra/main/js/move-top.js"></script>
+    <script type="text/javascript" src="http://alist.tlljyang.pp.ua:16600/DBMS-PROJECT-test/extra/main/js/easing.js"></script>
     <!-- here stars scrolling icon -->
     <script type="text/javascript">
         $(document).ready(function () {
@@ -816,7 +816,7 @@
     <!-- //here ends scrolling icon -->
 
     <!-- Date-Picker-JavaScript -->
-    <script src="js/jquery-ui.js"></script>
+    <script src="http://alist.tlljyang.pp.ua:16600/DBMS-PROJECT-test/extra/main/js/jquery-ui.js"></script>
     <script>
         $(function () {
             $("#datepicker,#datepicker1,#datepicker2").datepicker();
@@ -825,7 +825,7 @@
     <!-- //Date-Picker-JavaScript -->
 
     <!-- banner text effect js file -->
-    <script src="js/modernizr.custom.72111.js"></script>
+    <script src="http://alist.tlljyang.pp.ua:16600/DBMS-PROJECT-test/extra/main/js/modernizr.custom.72111.js"></script>
     <!-- //banner text effect js file -->
 
     <!-- like/dislike -->
