--- a/Project Frontend/首页/index.html
+++ b/Project Frontend/首页/index.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="css/style.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <!-- default css files -->
-
+    <!-- do not use google api -->
     <!--web font-->
     <link href="http://fonts.loli.net/css?family=Pacifico&amp;subset=latin-ext,vietnamese" rel="stylesheet">
     <link
