--- a/Project Frontend/请假/Leave Management System.html
+++ b/Project Frontend/请假/Leave Management System.html
@@ -77,7 +77,7 @@
                     <tr>
                         <td>2025-11-30</td>
                         <td>2025-12-04</td>
-                        <td>uncomfortab</td>
+                        <td>uncomfortable</td>
                         <td><span class="status-badge status-pending">Pending</span></td>
                     </tr>
                     <tr>
